Should fix overlapping issue on term page

--- a/app/styles/quickgo.css
+++ b/app/styles/quickgo.css
@@ -350,6 +350,7 @@ textarea.sidebar {
 
 #term-section-nav {
   min-width: 270px;
+  padding-left: none;
   /*position: fixed;*/
 }
 
